2007-08-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* choosefont/Tcl/dkf_chooseFont.tcl: Applied patch from Emiliano
	to handle grid anchor differences between 8.4 and 8.5.

2007-08-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Patch from Steve Landers to enhance MacOSX support.

2007-08-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Avoid mishandling chatstate (xep-0085) notification 
	messages if we get them.

2007-08-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:  Use a procedure to create all our dialogs and get
	sensible icons and transient etc on windows. Use an MDI close
	button if available for the history pane.

2007-04-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added installation menu item to self-install into
	Freedesktop desktops (GNOME or KDE).
	Fixed omission in saving the UseTkOnly option.

2007-04-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:     Added option to prevent the use of ttk widgets. 
	Either start the program with -tkonly or set the checkbox on the
	Options dialog.
	
	* tkchat48.gif:   Created application icon and desktop integration
	* tkchat48.png:   file for Unix (GNOME/KDE) systems.
	* tkchat.desktop:
	* tkchat.tcl:     Fixed a bug when cancelling the font dialog.
	* choosefont/choose_gtk.tcl:

2007-04-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied patch #1633074 to add support for highlighting
	when user specified search terms are seen in the chat. (Jos Decoster)

2007-04-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* choosefont/critcl.tcl (loadlib): Fail gracefully if the binary
	cannot be loaded and drop down to the pure-tcl version.
	* tkchat.tcl: Poll (slowly, every 10 minutes) the IRC user list in
	case it has gone adrift. Fixes in the bridge may mean this is no
	longer happening.

2007-04-10  Pat Thoyts  <patthoyts@users.sourceforge.net>
