@@ -1,3 +1,10 @@
+2007-09-01  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Support for checking the validity of the SSL
+	certificate chain and for dsplaying all the certificates in the
+	chain. Requires patch to the jlibssl used by tkchat. Option on 
+	the logon screen to disable verification.
+
 2007-08-30  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* choosefont/Tcl/dkf_chooseFont.tcl: Applied patch from Emiliano
